<resources>
    <string name="app_name">DoFood</string>
    <string name="title_activity_login">Login</string>
    <string name="tab_text_1">Donar</string>
    <string name="tab_text_2">Charity</string>
    <string name="tab_text_3">Volunteer</string>

    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="donors_help">dsaklfjlks</string>
    <string name="charities_help">dsaklfjlks</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_home">Home</string>
    <string name="abouts_intro">DoFood provides donors and charities with a platform to connect and exchange unwanted/excess food.
        The idea is that donors post about having excess food resources, thus making it available for charities and consumers. They can
        then easily connect and communicate with each other. </string>
    <string name="how_to_donate">Go to Charity\'s Home -> Select appropriate from the populated charity list -> Enter Donation
        Details -> Press "Donate" </string>
    <string name="update_user_details">From Menu -> select "Profile"</string>
    <string name="user_profile_photo">From Menu -> select "Profile" -> click on the photo icon</string>
    <string name="donation_done">Once, donation is performed successfully, you will receive a "thank you" card which is designed by the
        charity organization. Sit back and relax, the staff or volunteers will be there soon to pick up the food supplies.</string>
    <string name="check_past_activity">In order to review past transaction and activities, go to
        Menu -> Donation History/Volunteer Requests/Volunteer History</string>
    <string name="enroll_volunteer">Select the appropriate charity -> click on "Enroll" button -> Choose CONFIRM</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_up1">SignUp1</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_donar">DonarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open1">Open navigation drawer</string>
    <string name="navigation_drawer_close1">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_help"><![CDATA[Help & Documentation]]></string>
    <string name="donor">Donor</string>
    <string name="charity">Charity</string>
    <string name="volunteer">Volunteer</string>
    <string name="logout">Logout</string>
    <string name="help"><![CDATA[Help & Documentation]]></string>
    <string name="about_us">About Us</string>
    <string name="profile">Profile</string>
    <string name="donationHistory">Donation History</string>

    <string name="volunteers_requests">Volunteers Requests</string>
    <string name="volunteer_history">Volunteer History</string>
    <string name="service_fields_description">DoFood offers a platform for people who want to contribute towards betterment of society. We welcome the warm hearted people to enroll as volunteers to assist in food exchange activities</string>
    <string name="service_fields_title">SERVICE FIELDS</string>
    <string name="about_us_title">ABOUT US</string>
    <string name="help_and_faq_title"><![CDATA[HELP & FAQ]]></string>
    <string name="how_to_donate_title">How to Donate ?</string>
    <string name="how_to_update_user_details_title">How to update user details ?</string>
    <string name="how_to_update_user_profile_photo_title">How to update profile picture ?</string>
    <string name="what_after_donation_is_done_title">What after Donation is done</string>
    <string name="check_for_past_activities_title">How to check for past activities ?</string>
    <string name="enroll_for_volunteer_activities_title">How to enroll for Volunteer Activities ?</string>
    <string name="need_additional_help_titlle">Need additional help ?</string>
    <string name="need_more_help_description">Feel free to reach us at DoFood@halifax.ca, We wil be happy to help you</string>

</resources>



