<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_aboutus"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_donation_history"
            android:icon="@drawable/ic_donatiion_history"
            android:title="@string/donationHistory" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_help_and_documentation"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>